# Machine-Learning-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
dashboard/: app.py
scripts/: benchmark_models.py  compare_goal_model.py  predict_upcoming_fixtures.py  run_epl_baseline.py  run_forecast.py  run_pipeline.py  run_training.py  run_walk_forward.py  tune_no_odds_walk_forward.py
src/inflation_nowcasting/: __init__.py  config.py  data_loader.py  features.py  modeling.py  pipeline.py
src/premier_league_predictor/: __init__.py  baseline.py  upcoming.py
