[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "premier-league-predictor"
version = "0.1.0"
description = "Premier League match outcome predictor starter project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.4.2",
  "numpy>=2.1.0",
  "pandas>=2.2.2",
  "streamlit>=1.56.0",
  "scikit-learn>=1.6.1",
  "typer>=0.16.0",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
